--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 logging.level.org.springframework.jdbc=DEBUG
 spring.application.name=su-cs363-project
-spring.datasource.url=jdbc:mysql://localhost:3306/su-cs363-project?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/su_cs363_project?createDatabaseIfNotExist=true
 spring.datasource.username=root
